--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 header{
-    background-image: linear-gradient(10deg, #e6681a 25%, #7b92f7 50%);
+    background-color: black;
 }
 
 
@@ -61,9 +61,9 @@ a{
 
         width: 100%;
         display: flex;
-        background-image: linear-gradient(10deg, #e6681a 25%, #7b92f7 50%);
+        background-color: black;
         margin-top: 100px;
         font-family: Calibri, Helvetica, sans-serif;
         text-align: center;
-        color: rgb(14, 13, 13);
+        color: rgb(235, 223, 223);
         }
